src/test/ui/coherence/coherence-orphan.re.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-orphan.rs:13:1
   |
LL | impl TheTrait<usize> for isize { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^-----
   | |                        |
   | |                        `isize` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: `usize` is not defined in the current crate
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-orphan.rs:21:1
   |
LL | impl !Send for Vec<isize> { }
   | ^^^^^^^^^^^^^^^----------
   | |              |
   | |              `std::vec::Vec<isize>` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0117`.
